--- a/server/environment.yml
+++ b/server/environment.yml
@@ -2,14 +2,9 @@ name: rolex-server
 channels:
   - conda-forge
   - defaults
-  - pytorch
-  - nvidia
 dependencies:
   - python=3.11
   - pip
-  - numpy>=1.21.0,<2.0.0
-  - pytorch::pytorch>=2.0.0
-  - pytorch::pytorch-cuda
   - pip:
     - fastapi>=0.100.0
     - uvicorn[standard]>=0.23.0
@@ -18,5 +13,7 @@ dependencies:
     - ommx>=0.0.21
     - pytest>=7.0.0
     - httpx>=0.24.0
+    - numpy>=1.21.0,<2.0.0
+    - torch>=2.0.0
     - gurobi>=11.0.0
   # Note: cuopt-cu12 still via pip from NVIDIA PyPI when available 
