Fix deployment configuration standardization
- Standardize port to 8000 across all components
- Standardize conda environment name to 'rolex-server'
- Remove systemd service management from Ansible playbook
- Replace with rolex_server.sh script execution
- Fix OMMX constraint equality API issue in Gurobi solver

Changes:
- server/server.py: default port 8000
- run/rolex_server.sh: DEFAULT_PORT=8000, CONDA_ENV_NAME='rolex-server'
- iac/terraform/terraform.tfvars: conda_env_name='rolex-server'
- iac/ansible/playbook.yml: Remove systemd tasks, add rolex_server.sh execution
- server/solvers/gurobi_solver.py: Fix constraint equality API (ommx.Constraint.LESS_THAN_OR_EQUAL_TO_ZERO)

--- a/server/environment.yml
+++ b/server/environment.yml
@@ -1,19 +1,37 @@
 name: rolex-server
 channels:
-  - conda-forge
-  - defaults
+  - gurobi           # Official Gurobi channel
+  - nvidia           # NVIDIA CUDA packages
+  - conda-forge      # Community packages (preferred for most)
+  - defaults         # Anaconda defaults
 dependencies:
-  - python=3.11
+  - python=3.12
+  
+  # Core web framework (conda available)
+  - fastapi>=0.100.0
+  - uvicorn>=0.23.0
+  - pydantic>=2.0.0
+  - python-multipart>=0.0.6
+  
+  # Scientific computing (conda available)
+  - numpy>=1.21.0,<2.0.0
+  - scipy>=1.9.0
+  - pytorch>=2.0.0
+  - cpuonly  # CPU-only PyTorch for server
+  
+  # Testing (conda available)
+  - pytest>=7.0.0
+  - httpx>=0.24.0
+  
+  # Optimization solver (conda available)
+  - gurobi>=12.0.0  # From gurobi channel
+  
+  # CUDA support (conda available)
+  - cuda-runtime>=12.0  # From nvidia channel
+  - cuda-libraries>=12.0  # From nvidia channel
+  
+  # Only pip for packages not available via conda
   - pip
   - pip:
-    - fastapi>=0.100.0
-    - uvicorn[standard]>=0.23.0
-    - pydantic>=2.0.0
-    - python-multipart>=0.0.6
-    - ommx>=0.0.21
-    - pytest>=7.0.0
-    - httpx>=0.24.0
-    - numpy>=1.21.0,<2.0.0
-    - torch>=2.0.0
-    - scipy>=1.9.0
-  # Note: cuopt-cu12 still via pip from NVIDIA PyPI when available 
+    - ommx>=0.0.21          # Not available via conda
+    # cuOpt installation handled separately due to special requirements 
