Simplify cuOpt installation - move from complex playbook task to environment.yml
- Remove unnecessary shell commands from playbook.yml
- Add cuOpt directly to environment.yml pip section with extra-index-url
- Both approaches use pip anyway, so no need for complexity
- Single source of truth for all dependencies

--- a/server/environment.yml
+++ b/server/environment.yml
@@ -34,4 +34,4 @@ dependencies:
   - pip
   - pip:
     - ommx>=0.0.21          # Not available via conda
-    # cuOpt installation handled separately due to special requirements 
+    - cuopt-cu12==25.5.0 --extra-index-url=https://pypi.nvidia.com  # NVIDIA cuOpt 
