--- a/server/environment.yml
+++ b/server/environment.yml
@@ -16,7 +16,8 @@ dependencies:
   # Scientific computing (conda available)
   - numpy>=1.21.0,<2.0.0
   - scipy>=1.9.0
-  - pytorch>=2.0.0
+  - pytorch>=2.0.0=*cuda*     # Force CUDA build variant
+  - pytorch-cuda>=12.0        # Ensure CUDA 12.x compatibility
   
   # Testing (conda available)
   - pytest>=7.0.0
