Add pytorch channel for CUDA-enabled PyTorch packages
- Add pytorch channel to channels list before conda-forge
- Required for pytorch-cuda package availability
- Fixes PackagesNotFoundError during conda environment creation

--- a/server/environment.yml
+++ b/server/environment.yml
@@ -2,6 +2,7 @@ name: rolex-server
 channels:
   - gurobi           # Official Gurobi channel
   - nvidia           # NVIDIA CUDA packages
+  - pytorch          # PyTorch with CUDA support
   - conda-forge      # Community packages (preferred for most)
   - defaults         # Anaconda defaults
 dependencies:
